# ExplorationC2

./: .gitmodules  CMakeLists.txt  README.md
libs/libProtobufMessages/: generate.bat  generate.sh
libs/libProtobufMessages/src/: C2Message.proto
libs/libSocketHandler/: CMakeLists.txt
libs/libSocketHandler/src/: SocketHandler.cpp  SocketHandler.hpp
src/: Beacon.cpp  Beacon.hpp  BeaconHttp.cpp  BeaconHttp.hpp  BeaconLaucher.cpp  BeaconTcp.cpp  BeaconTcp.hpp  CoreC2.cpp  CoreC2.hpp  HttpClient.cpp  HttpServer.cpp  Listener.cpp  Listener.hpp  ListenerHttp.cpp  ListenerHttp.hpp  ListenerTcp.cpp  ListenerTcp.hpp  Tools.cpp  Tools.hpp
tests/: CMakeLists.txt  README.md  RevShellLinux.c  RevShellLinux.nasm  RevShellWindows.cpp  dumy.c  exec-asemblyLinux.c  exec-asemblyWindows.cpp  exec-assemblyLinux.c  generate.sh  injectLinux.c  scriptTests.sh
